; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_r_data.c_R_InitFlats.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_r_data.c_R_InitFlats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"F_START\00", align 1
@firstflat = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [6 x i8] c"F_END\00", align 1
@lastflat = common dso_local global i32 0, align 4
@numflats = common dso_local global i32 0, align 4
@PU_STATIC = common dso_local global i32 0, align 4
@flattranslation = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @R_InitFlats() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @W_GetNumForName(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %3 = add nsw i32 %2, 1
  store i32 %3, i32* @firstflat, align 4
  %4 = call i32 @W_GetNumForName(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %5 = sub nsw i32 %4, 1
  store i32 %5, i32* @lastflat, align 4
  %6 = load i32, i32* @lastflat, align 4
  %7 = load i32, i32* @firstflat, align 4
  %8 = sub nsw i32 %6, %7
  %9 = add nsw i32 %8, 1
  store i32 %9, i32* @numflats, align 4
  %10 = load i32, i32* @numflats, align 4
  %11 = add nsw i32 %10, 1
  %12 = mul nsw i32 %11, 4
  %13 = load i32, i32* @PU_STATIC, align 4
  %14 = call i32* @Z_Malloc(i32 %12, i32 %13, i32 0)
  store i32* %14, i32** @flattranslation, align 8
  store i32 0, i32* %1, align 4
  br label %15

15:                                               ; preds = %25, %0
  %16 = load i32, i32* %1, align 4
  %17 = load i32, i32* @numflats, align 4
  %18 = icmp slt i32 %16, %17
  br i1 %18, label %19, label %28

19:                                               ; preds = %15
  %20 = load i32, i32* %1, align 4
  %21 = load i32*, i32** @flattranslation, align 8
  %22 = load i32, i32* %1, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds i32, i32* %21, i64 %23
  store i32 %20, i32* %24, align 4
  br label %25

25:                                               ; preds = %19
  %26 = load i32, i32* %1, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %1, align 4
  br label %15

28:                                               ; preds = %15
  ret void
}

declare dso_local i32 @W_GetNumForName(i8*) #1

declare dso_local i32* @Z_Malloc(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
